--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ilias Radouche — Full Stack MERN developer and UX/UI designer. Explore projects, experience, and contact details." />
+    <meta property="og:title" content="ILIAS RADOUCHE — Portfolio" />
+    <meta property="og:description" content="Full Stack MERN developer crafting performant, accessible web apps. View featured work and get in touch." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/vite.svg" />
+    <meta property="og:url" content="/" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="ILIAS RADOUCHE — Portfolio" />
+    <meta name="twitter:description" content="Full Stack MERN developer and designer. Projects, experience, and contact." />
+    <meta name="twitter:image" content="/vite.svg" />
     <title>ILIAS RADOUCHE</title>
   </head>
   <body>
